--- a/.github/workflows/awscli_nix.yml
+++ b/.github/workflows/awscli_nix.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   image_tag:
-    name: Get image tag
+    name: Run aws version
     runs-on: "ubuntu-latest"
     steps:
       - name: Setup nix
@@ -16,7 +16,7 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-24.11
 
-      - name: Login to docker registry
+      - name: Print aws version
         uses: workflow/nix-shell-action@v3
         with:
           packages: awscli2
