--- a/.github/workflows/aws_sam_nix.yml
+++ b/.github/workflows/aws_sam_nix.yml
@@ -16,6 +16,10 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-25.11
 
+      - name: System metadata info
+        run: |
+          nix-shell -p nix-info --run "nix-info -m"
+
       - name: Print aws version
         uses: workflow/nix-shell-action@v3
         with:
